{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 559,
  "lineage": "d44e4c0d-64b5-856c-70cf-2e887c030559",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "armageddon_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df98e60c9d0335f0",
            "arn": "arn:aws:ec2:us-east-1:975598471165:elastic-ip/eipalloc-0df98e60c9d0335f0",
            "domain": "vpc",
            "id": "eipalloc-0df98e60c9d0335f0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-17-79-253.compute-1.amazonaws.com",
            "public_ip": "50.17.79.253",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-nat-eip01"
            },
            "tags_all": {
              "Name": "armageddon-final-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "armageddon_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ff62358b87c7116",
            "arn": "arn:aws:ec2:us-east-1:975598471165:instance/i-07a97a3fdabc35cb0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-final-instance-profile01",
            "id": "i-07a97a3fdabc35cb0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fd2f11f69e8b0d86"
              }
            ],
            "primary_network_interface_id": "eni-0fd2f11f69e8b0d86",
            "private_dns": "ip-10-108-101-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.108.101.107",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03c4cb7a47eaae083",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbbf2cc938b59424",
            "tags": {
              "Name": "armageddon-final-ec201"
            },
            "tags_all": {
              "Name": "armageddon-final-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ea41e59ac2ba090"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "i-07a97a3fdabc35cb0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.armageddon_instance_profile01",
            "aws_iam_role.armageddon_ec2_role01",
            "aws_security_group.armageddon_ec2_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "armageddon_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ff62358b87c7116",
            "arn": "arn:aws:ec2:us-east-1:975598471165:instance/i-01d4c200ab29770a2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-final-instance-profile01",
            "id": "i-01d4c200ab29770a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02eac5b2d554763b5"
              }
            ],
            "primary_network_interface_id": "eni-02eac5b2d554763b5",
            "private_dns": "ip-10-108-101-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.108.101.73",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-019660e8f414a46de",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbbf2cc938b59424",
            "tags": {
              "Name": "armageddon-final-ec201-private"
            },
            "tags_all": {
              "Name": "armageddon-final-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ea41e59ac2ba090"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "i-01d4c200ab29770a2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.armageddon_instance_profile01",
            "aws_iam_role.armageddon_ec2_role01",
            "aws_security_group.armageddon_ec2_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "armageddon_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:internet-gateway/igw-0ef316eb1f989b192",
            "id": "igw-0ef316eb1f989b192",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-igw01"
            },
            "tags_all": {
              "Name": "armageddon-final-igw01"
            },
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "armageddon_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "armageddon-final-alb-logs-975598471165",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:loadbalancer/app/armageddon-final-alb01/162f8fcc2d94339a",
            "arn_suffix": "app/armageddon-final-alb01/162f8fcc2d94339a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "armageddon-final-alb01-1957651177.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:loadbalancer/app/armageddon-final-alb01/162f8fcc2d94339a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "armageddon-final-alb01",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0a865e92860896b5c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01dfef1fde21bee6a"
              },
              {
                "subnet_id": "subnet-0ed788234610fa000"
              }
            ],
            "subnets": [
              "subnet-01dfef1fde21bee6a",
              "subnet-0ed788234610fa000"
            ],
            "tags": {
              "Name": "armageddon-final-alb01"
            },
            "tags_all": {
              "Name": "armageddon-final-alb01"
            },
            "vpc_id": "vpc-0255c2f600ec6b1d0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:loadbalancer/app/armageddon-final-alb01/162f8fcc2d94339a"
          },
          "dependencies": [
            "aws_s3_bucket.armageddon_alb_logs_bucket01",
            "aws_security_group.armageddon_alb_sg01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_caller_identity.armageddon_self01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "armageddon_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/162f8fcc2d94339a/1a0d72cdea7d8fe6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/162f8fcc2d94339a/1a0d72cdea7d8fe6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:loadbalancer/app/armageddon-final-alb01/162f8fcc2d94339a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/162f8fcc2d94339a/1a0d72cdea7d8fe6"
          },
          "dependencies": [
            "aws_lb.armageddon_alb01",
            "aws_s3_bucket.armageddon_alb_logs_bucket01",
            "aws_security_group.armageddon_alb_sg01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_caller_identity.armageddon_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "armageddon_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/162f8fcc2d94339a/5368584e6f4a46f0",
            "certificate_arn": "arn:aws:acm:us-east-1:975598471165:certificate/9582eb20-43d2-407c-bfe1-2394f74dc90e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/fb723df15f4f173c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/162f8fcc2d94339a/5368584e6f4a46f0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:loadbalancer/app/armageddon-final-alb01/162f8fcc2d94339a",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/162f8fcc2d94339a/5368584e6f4a46f0"
          },
          "dependencies": [
            "aws_acm_certificate.armageddon_acm_cert01",
            "aws_acm_certificate_validation.armageddon_acm_validation01_dns_bonus",
            "aws_lb.armageddon_alb01",
            "aws_lb_target_group.armageddon_tg01",
            "aws_route53_record.armageddon_acm_validation_records01",
            "aws_s3_bucket.armageddon_alb_logs_bucket01",
            "aws_security_group.armageddon_alb_sg01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_caller_identity.armageddon_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "armageddon_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/fb723df15f4f173c",
            "arn_suffix": "targetgroup/armageddon-final-tg01/fb723df15f4f173c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/fb723df15f4f173c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "armageddon-final-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "armageddon-final-tg01"
            },
            "tags_all": {
              "Name": "armageddon-final-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/fb723df15f4f173c"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "armageddon_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/fb723df15f4f173c-2026020419154128520000000f",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/fb723df15f4f173c",
            "target_id": "i-01d4c200ab29770a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.armageddon_instance_profile01",
            "aws_iam_role.armageddon_ec2_role01",
            "aws_instance.armageddon_ec201_private_bonus",
            "aws_lb_target_group.armageddon_tg01",
            "aws_security_group.armageddon_ec2_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "armageddon_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df98e60c9d0335f0",
            "association_id": "eipassoc-00af2ecde56580e79",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-01dd54920e513ace9",
            "network_interface_id": "eni-0e1145394213c68ba",
            "private_ip": "10.108.1.112",
            "public_ip": "50.17.79.253",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01dfef1fde21bee6a",
            "tags": {
              "Name": "armageddon-final-nat01"
            },
            "tags_all": {
              "Name": "armageddon-final-nat01"
            },
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.armageddon_nat_eip01",
            "aws_internet_gateway.armageddon_igw01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "armageddon_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b667c490b2e75b2b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01dd54920e513ace9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0b667c490b2e75b2b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0b667c490b2e75b2b"
          },
          "dependencies": [
            "aws_eip.armageddon_nat_eip01",
            "aws_internet_gateway.armageddon_igw01",
            "aws_nat_gateway.armageddon_nat01",
            "aws_route_table.armageddon_private_rt01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "armageddon_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ef316eb1f989b192",
            "id": "r-rtb-056f35cdcaf42de061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-056f35cdcaf42de06",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-056f35cdcaf42de06"
          },
          "dependencies": [
            "aws_internet_gateway.armageddon_igw01",
            "aws_route_table.armageddon_public_rt01",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "armageddon_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:route-table/rtb-0b667c490b2e75b2b",
            "id": "rtb-0b667c490b2e75b2b",
            "owner_id": "975598471165",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "armageddon-final-private-rt01"
            },
            "tags_all": {
              "Name": "armageddon-final-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "rtb-0b667c490b2e75b2b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "armageddon_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:route-table/rtb-056f35cdcaf42de06",
            "id": "rtb-056f35cdcaf42de06",
            "owner_id": "975598471165",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "armageddon-final-public-rt01"
            },
            "tags_all": {
              "Name": "armageddon-final-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "rtb-056f35cdcaf42de06",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "armageddon_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad265b42e74ecde2",
            "region": "us-east-1",
            "route_table_id": "rtb-0b667c490b2e75b2b",
            "subnet_id": "subnet-0cbbf2cc938b59424"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_private_rt01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b87811d124e0a2ea",
            "region": "us-east-1",
            "route_table_id": "rtb-0b667c490b2e75b2b",
            "subnet_id": "subnet-097855c7611a9e183"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_private_rt01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "armageddon_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034e4ffdc121fd0e4",
            "region": "us-east-1",
            "route_table_id": "rtb-056f35cdcaf42de06",
            "subnet_id": "subnet-01dfef1fde21bee6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_public_rt01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068a29391bd5332a9",
            "region": "us-east-1",
            "route_table_id": "rtb-056f35cdcaf42de06",
            "subnet_id": "subnet-0ed788234610fa000"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_public_rt01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "armageddon_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:security-group/sg-0a865e92860896b5c",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound to target group (usually 80) to private network",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a865e92860896b5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "My homepage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "armageddon-final-alb-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-final-alb-sg01"
            },
            "tags_all": {
              "Name": "armageddon-final-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-0a865e92860896b5c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "armageddon_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:security-group/sg-08ea41e59ac2ba090",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ea41e59ac2ba090",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "armageddon-final-ec2-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-final-ec2-sg01"
            },
            "tags_all": {
              "Name": "armageddon-final-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-08ea41e59ac2ba090",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "armageddon_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:security-group/sg-0de206805ee681f8e",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de206805ee681f8e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ea41e59ac2ba090"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "armageddon-final-rds-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-final-rds-sg01"
            },
            "tags_all": {
              "Name": "armageddon-final-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-0de206805ee681f8e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_ec2_sg01",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "armageddon_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:security-group/sg-05177372804a7cc86",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-05177372804a7cc86",
            "ingress": [],
            "name": "armageddon-final-vpce-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-final-vpce-sg01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-05177372804a7cc86",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "armageddon_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-351019483",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08ea41e59ac2ba090",
            "security_group_rule_id": "sgr-01fe4dd0bbde2069d",
            "self": false,
            "source_security_group_id": "sg-0a865e92860896b5c",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.armageddon_alb_sg01",
            "aws_security_group.armageddon_ec2_sg01",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "armageddon_vpce_sg01_ingress_https_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS from EC2 SG",
            "from_port": 443,
            "id": "sgrule-3386873705",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-05177372804a7cc86",
            "security_group_rule_id": "sgr-06cb9d667ce55b122",
            "self": false,
            "source_security_group_id": "sg-08ea41e59ac2ba090",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.armageddon_ec2_sg01",
            "aws_security_group.armageddon_vpce_sg01",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "armageddon_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:subnet/subnet-0cbbf2cc938b59424",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.108.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbbf2cc938b59424",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-private-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-final-private-subnet01"
            },
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-0cbbf2cc938b59424",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:subnet/subnet-097855c7611a9e183",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.108.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097855c7611a9e183",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-private-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-final-private-subnet02"
            },
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-097855c7611a9e183",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "armageddon_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:subnet/subnet-01dfef1fde21bee6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.108.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dfef1fde21bee6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-public-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-final-public-subnet01"
            },
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-01dfef1fde21bee6a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:subnet/subnet-0ed788234610fa000",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.108.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed788234610fa000",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-public-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-final-public-subnet02"
            },
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-0ed788234610fa000",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "armageddon_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc/vpc-0255c2f600ec6b1d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.108.0.0/16",
            "default_network_acl_id": "acl-0690bfc70d88833a2",
            "default_route_table_id": "rtb-067bf9b97ac47d5fe",
            "default_security_group_id": "sg-06114556de1c7fc02",
            "dhcp_options_id": "dopt-03e61696f1f7e3e27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0255c2f600ec6b1d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067bf9b97ac47d5fe",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-vpc01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpc-0255c2f600ec6b1d0",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-0650d60ebcf2c5f12",
            "dns_entry": [
              {
                "dns_name": "vpce-0650d60ebcf2c5f12-01bey2ri.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0650d60ebcf2c5f12-01bey2ri-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0650d60ebcf2c5f12-01bey2ri-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03161163RCNB4U4L73QL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0650d60ebcf2c5f12",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-092b8746b4beac154",
              "eni-09d56ac4d881c7e37"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05177372804a7cc86"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.121",
                "subnet_id": "subnet-0cbbf2cc938b59424"
              },
              {
                "ipv4": "10.108.102.182",
                "subnet_id": "subnet-097855c7611a9e183"
              }
            ],
            "subnet_ids": [
              "subnet-097855c7611a9e183",
              "subnet-0cbbf2cc938b59424"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0650d60ebcf2c5f12",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-03b498a83f167d204",
            "dns_entry": [
              {
                "dns_name": "vpce-03b498a83f167d204-nnf35d11.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03b498a83f167d204-nnf35d11-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03b498a83f167d204-nnf35d11-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z067495532UBAJ0R20X7P"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z06749503395N2GG6UFT8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03b498a83f167d204",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-055908024ea944ca3",
              "eni-0bd26fdfc2922a83c"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05177372804a7cc86"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.238",
                "subnet_id": "subnet-0cbbf2cc938b59424"
              },
              {
                "ipv4": "10.108.102.60",
                "subnet_id": "subnet-097855c7611a9e183"
              }
            ],
            "subnet_ids": [
              "subnet-097855c7611a9e183",
              "subnet-0cbbf2cc938b59424"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-kms01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-03b498a83f167d204",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-0566b69bae9b38829",
            "dns_entry": [
              {
                "dns_name": "vpce-0566b69bae9b38829-rjgixb7m.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0566b69bae9b38829-rjgixb7m-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0566b69bae9b38829-rjgixb7m-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06842073N8LFN2N67D3V"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01220455I53PBQQKPZ1"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z03390052U39RIMLKU4U4"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z06842022IEXGVE1Y10NS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0566b69bae9b38829",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06aeffa601aa366c5",
              "eni-0aee4e2ceab3b1a81"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05177372804a7cc86"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.90",
                "subnet_id": "subnet-0cbbf2cc938b59424"
              },
              {
                "ipv4": "10.108.102.25",
                "subnet_id": "subnet-097855c7611a9e183"
              }
            ],
            "subnet_ids": [
              "subnet-097855c7611a9e183",
              "subnet-0cbbf2cc938b59424"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-logs01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0566b69bae9b38829",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-0040591a85c0b306d",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0040591a85c0b306d",
            "ip_address_type": "ipv4",
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b667c490b2e75b2b"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "armageddon-final-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0040591a85c0b306d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.armageddon_private_rt01",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-00800799d1d37f5ff",
            "dns_entry": [
              {
                "dns_name": "vpce-00800799d1d37f5ff-cw1dn1m0.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00800799d1d37f5ff-cw1dn1m0-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00800799d1d37f5ff-cw1dn1m0-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03180373AOZPYB83BOCH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00800799d1d37f5ff",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0688af85021f629e7",
              "eni-0a2b9e941796d46b8"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05177372804a7cc86"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.205",
                "subnet_id": "subnet-0cbbf2cc938b59424"
              },
              {
                "ipv4": "10.108.102.138",
                "subnet_id": "subnet-097855c7611a9e183"
              }
            ],
            "subnet_ids": [
              "subnet-097855c7611a9e183",
              "subnet-0cbbf2cc938b59424"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-secrets01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-00800799d1d37f5ff",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-027692eef68a063e4",
            "dns_entry": [
              {
                "dns_name": "vpce-027692eef68a063e4-l0pj10u2.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-027692eef68a063e4-l0pj10u2-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-027692eef68a063e4-l0pj10u2-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03179853BUCQ1H7PB26I"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z067531836X5M25L2WWCS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-027692eef68a063e4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04f7fec2f1b682808",
              "eni-0a3514d3fb9bf0e01"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05177372804a7cc86"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.219",
                "subnet_id": "subnet-0cbbf2cc938b59424"
              },
              {
                "ipv4": "10.108.102.74",
                "subnet_id": "subnet-097855c7611a9e183"
              }
            ],
            "subnet_ids": [
              "subnet-097855c7611a9e183",
              "subnet-0cbbf2cc938b59424"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-ssm01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-027692eef68a063e4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-0907397a2b3bdd7eb",
            "dns_entry": [
              {
                "dns_name": "vpce-0907397a2b3bdd7eb-45d7byag.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0907397a2b3bdd7eb-45d7byag-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0907397a2b3bdd7eb-45d7byag-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03376961FZSR2QMG27YA"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z01221862WSFEQSFJ5LO6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0907397a2b3bdd7eb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-016c9a269ca2174e4",
              "eni-0461241138f7d0f8d"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05177372804a7cc86"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.67",
                "subnet_id": "subnet-0cbbf2cc938b59424"
              },
              {
                "ipv4": "10.108.102.91",
                "subnet_id": "subnet-097855c7611a9e183"
              }
            ],
            "subnet_ids": [
              "subnet-097855c7611a9e183",
              "subnet-0cbbf2cc938b59424"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0255c2f600ec6b1d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0907397a2b3bdd7eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    }
  ]
}